# securechat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  key.txt
client/: CMakeLists.txt
client/include/: cipher.h
client/src/: MainWnd.cpp  MainWnd.h  cipher.c  cipher.cpp  client.cpp  mainwnd.ui
client/tests/: CMakeLists.txt  cipher_tests.cpp
server/: CMakeLists.txt
server/include/: cipher.h  server.h
server/src/: cipher.c  cipher.cpp  server.cpp
server/tests/: CMakeLists.txt  cipher_tests.cpp  server_tests.cpp
www/: register.html  serverlog.html
